# Estudo-Django-Rest-Framework

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yaml
bookstore/: settings.py
order/migrations/: 0001_initial.py
order/tests/test_serializers/: test_order_serializer.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
