[tool.poetry]
name = "django rest bookstore"
version = "0.1.0"
description = "bookstore api"
authors = ["oLucas-Cipriano <lucas.e.a.cipriano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
factory-boy = "^3.3.1"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
